# graphics-example

./: CMakeLists.txt  README.md  main.cpp
graphicsLib/: CMakeLists.txt
graphicsLib/geometryEntities/: Circle.h  Point2D.h  Polygon.h  Rectangle.h  Shape.h  Triangle.h
graphicsLib/renderer/: Renderer.h  SFMLRenderer.cpp  SFMLRenderer.h
